
2013-08-30  Andreas Grapentin  <andreas@grapentin.org>

	* libgraprof/libgraprof.c: minor change to const char* errors
	* libgraprof/highrestimer.c: replaced feedback_warning call with
	perror, effectively removing the grapes dependency of libgraprof

2013-08-27  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/function.c: added total function count incremented in
	function_enter, and added accessor function definition
	* graprof/function.h: added declaration
	* graprof/callgraph.c: added print for total function calls
	* graprof/flatprofile.c: added print for total function calls

	* graprof/function.c: added explicit memory deallocation routine
	* graprof/memory.c: likewise, fixed memory leak in memory_free

2013-08-26  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/flatprofile.c: fixed profile header and description
	* graprof/flatprofile.c: if call graph and flat profile are enabled,
	print function ids in flat profile

	* graprof/memory.c: fixed allocation tracking bug if already freed
	locations are allocated again
	* graprof/memprofile.c: removed distinction between invalid ptr and
	double free

	* graprof/flatprofile.h: added parameter to tell flatprofile_print to
	enable function id printing
	* graprof/flatprofile.c: implemented the behaviour of this parameter
	* graprof/graprof.c: changed call to flatprofile_print accordingly

2013-08-25  Andreas Grapentin  <andreas@grapentin.org>

	* libgraprof/highrestimer.c: removed function pointer approach, added
	proper error handling, made highrestimer_init static
	* libgraprof/instrument.c: removed function pointer approach
	* libgraprof/mallhooks.c: made mallhooks_active static
	* libgraprof/libgraprof.c: made libgraprof_init libgraprof_fini	static
	* graprof/addr.c: made addr_fini static
	* graprof/function.c: improved error handling for subfunctions in
	function_enter

	* libgraprof/buffer.h: added comments to public declarations
	* libgraprof/highrestimer.h: likewise