@@ -27,15 +27,8 @@
 #include <stdint.h>
 #include <stdlib.h>
 
-static unsigned int mallhooks_active = 0;
-
-extern void* __libc_malloc(size_t size);
-extern void* __libc_calloc(size_t nmemb, size_t size);
-extern void* __libc_realloc(void *ptr, size_t size);
-extern void __libc_free(void *ptr);
-
 static void*
-malloc_hook (size_t size, void *caller)
+malloc_hook (size_t size, const void *caller)
 {
   void *result;
 
@@ -56,28 +49,7 @@ malloc_hook (size_t size, void *caller)
 }
 
 static void*
-calloc_hook (size_t nmemb, size_t size, void *caller)
-{
-  void *result;
-
-  mallhooks_uninstall_hooks();
-
-  result = calloc(nmemb, size);
-
-  buffer_enlarge(sizeof(char) + sizeof(size_t) + 2 * sizeof(uintptr_t) + sizeof(unsigned long long));
-  buffer_append(char, '+');
-  buffer_append(size_t, nmemb * size);
-  buffer_append(uintptr_t, (uintptr_t)(caller - 4));
-  buffer_append(uintptr_t, (uintptr_t)result);
-  buffer_append(unsigned long long, highrestimer_get());
-
-  mallhooks_install_hooks();
-
-  return result;
-}
-
-static void*
-realloc_hook (void *ptr, size_t size, void *caller)
+realloc_hook (void *ptr, size_t size, const void *caller)
 {
   void *result;
 
@@ -99,7 +71,7 @@ realloc_hook (void *ptr, size_t size, void *caller)
 }
 
 static void
-free_hook (void *ptr, void *caller)
+free_hook (void *ptr, const void *caller)
 {
   mallhooks_uninstall_hooks();
 
@@ -116,6 +88,44 @@ free_hook (void *ptr, void *caller)
 
   mallhooks_install_hooks();
 }
+
+#if USE_DEPRECATED_MALLOC_HOOKS
+
+#include <malloc.h>
+
+static void *(*old_malloc_hook)(size_t, const void*);
+static void *(*old_realloc_hook)(void*, size_t, const void*);
+static void (*old_free_hook)(void *, const void*);
+
+void
+mallhooks_install_hooks ()
+{
+  old_malloc_hook = __malloc_hook;
+  __malloc_hook = malloc_hook;
+
+  old_realloc_hook = __realloc_hook;
+  __realloc_hook = realloc_hook;
+
+  old_free_hook = __free_hook;
+  __free_hook = free_hook;
+}
+
+void
+mallhooks_uninstall_hooks ()
+{
+  __malloc_hook = old_malloc_hook;
+  __realloc_hook = old_realloc_hook;
+  __free_hook = old_free_hook;
+}
+
+#else // USE_DEPRECATED_MALLOC_HOOKS
+
+static unsigned int mallhooks_active = 0;
+
+extern void* __libc_malloc(size_t size);
+extern void* __libc_calloc(size_t nmemb, size_t size);
+extern void* __libc_realloc(void *ptr, size_t size);
+extern void __libc_free(void *ptr);
 
 void
 mallhooks_install_hooks ()
@@ -138,7 +148,7 @@ malloc (size_t size)
 void*
 calloc (size_t nmemb, size_t size)
 {
-  return (mallhooks_active ? calloc_hook(nmemb, size, __builtin_return_address(0)) : __libc_calloc(nmemb, size));
+  return (mallhooks_active ? malloc_hook(nmemb * size, __builtin_return_address(0)) : __libc_calloc(nmemb, size));
 }
 
 void*
@@ -152,3 +162,5 @@ free (void *ptr)
 {
   return (mallhooks_active ? free_hook(ptr, __builtin_return_address(0)) : __libc_free(ptr));
 }
+
+#endif // USE_DEPRECATED_MALLOC_HOOKS
